# real-time-charts-with-fastapi

./: README.md  application.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
templates/: index.html
